<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="20dp">

        <!-- Logo SIGAM -->
        <ImageView
            android:id="@+id/imgLogoLogin"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_logo_sigam" />

        <!-- Título Iniciar sesión -->
        <TextView
            android:id="@+id/tvTitleLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/iniciar_sesion"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- Formulario -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:background="#DCDCDC"
            android:padding="20dp">

            <!-- Etiqueta Usuario -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usuario"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <!-- Campo Correo Rectangular -->
            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/bg_input_rect"
                android:hint="@string/correo"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="10dp"
                android:textColor="@color/black" />

            <!-- Etiqueta Contraseña -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/contrasena"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <!-- Campo Contraseña Rectangular -->
            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:autofillHints="password"
                android:background="@drawable/bg_input_rect"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingHorizontal="10dp"
                android:textColor="@color/black" />

            <!--  Olvidaste Contraseña -->
            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:text="@string/olvidaste"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <!-- Botón Ingresar -->
            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/orange_bg"
                android:text="@string/btn_ingresar"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <!-- Imagen Inferior Popayán -->
    <ImageView
        android:id="@+id/imgPopayanBottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/parque_popayan" />

</LinearLayout>